welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: '=>' expected but '.' found.
		case 10 .. 20 => return Math.max(a, b);
                        ^